@@ -15,6 +15,7 @@ tempshortnames=0
 curservmult=2.0
 makedirs=no
 usegz=-1
+timeout=180
 
 //hostname aliases
 {halias
