@@ -1,4 +1,4 @@
-.TH nget 1 "01 Aug 2001"
+.TH nget 1 "23 Sep 2001"
 .SH NAME
 nget \- retrieve files from NNTP hosts
 .SH SYNOPSIS
@@ -124,7 +124,7 @@ where data is any number of options.
 .P
 Global options that can be specified are: 
 .br
-Integral: limit, tries, debug, delay, usegz(-1=default, 0=uncompressed, 1-9=gzip compression level)
+Integral: limit, tries, debug, delay, usegz(-1=default, 0=uncompressed, 1-9=gzip compression level), timeout
 .br
 Float: curservmult
 .br
@@ -316,5 +316,6 @@ http://www.ecst.csuchico.edu/~beej/guide/net/
 .P
 Jean-loup Gailly and Mark Adler, for the zlib library.
 .SH "SEE ALSO"
+.BR ngetlite (1),
 .BR regex (7),
 .BR grep (1)
